test: common: Rework InterruptIssue158Test
Make test compile/run on Java 8 and newer.

Change assumptions around exceptions and interrupt state:
- Change expectation of ClosedByInterruptException to
  AsynchronousCloseException (its superclass).
- Only expect Thread#interrupted on actual ClosedByInterruptException.
- Use temporary AFUNIXSocketAddress instead of hardcoded one to prevent
  flaky results.

https://github.com/kohlschutter/junixsocket/issues/158